Add greynet page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,8 @@
     <head>
         <title>Asymmetric Effort: Home</title>
         <link rel="shortcut icon" type="image/icon" href="favicon.ico">
-        <link rel="stylesheet" href="https://asymmetric-effort.com/css/index.css" />
+        <link rel="stylesheet" href="css/index.css" />
         <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-2QMW9S4VQJ');
-        </script>
     </head>
     <body>
         <div id="page">
@@ -31,7 +24,7 @@
                     We are Asymmetric Effort.  Our mission is to improve cybersecurity through innovative approaches
                     focused on helping everyone stay safe online.  Whether you are a business or a consumer, our goal
                     is to develop tools, solutions and systems which protect your identity, data and peace of mind.
-		</p>
+		        </p>
             </div>
             <div id="footer">
                 <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
