add a quick check-back later paragraph.

--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -26,6 +26,9 @@
                    quantum-resistant infrastructure that empowers individuals and organizations to protect
                    their sensitive data from evolving threats.
                 </p>
+                <p>
+                    More about our project...
+                </p>
                 <iframe width="560"
                         height="315"
                         src="https://www.youtube.com/embed/vGCxyf-wk50?si=ABPM-Kg0yw8Gs4vc"
@@ -35,6 +38,9 @@
                         referrerpolicy="strict-origin-when-cross-origin"
                         allowfullscreen>
                 </iframe>
+                <p>
+                    We're busy building features right now, but check back for more information later.
+                </p>
             </div>
             </div>
             <div id="footer">
