--- a/greynet/index.html
+++ b/greynet/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0; url=https://asymmetric-effort.com/greyNet/">
+        <meta http-equiv="refresh" content="0; url=https://asymmetric-effort.com/greyNet/index.html">
         <title>Redirecting...</title>
     </head>
     <body>
