Fix formatting, add backlink

--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Asymmetric Effort: Home</title>
-        <link rel="shortcut icon" type="image/icon" href="favicon.ico">
-        <link rel="stylesheet" href="css/index.css" />
-        <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    </head>
-    <body>
-        <div id="page">
-            <div id="header">
-                <div id="logo">
-                    <img src="https://asymmetric-effort.com/logo.png?s=99" />
-                </div>
-                <div id="masthead">
-                    <h1>&nbsp;</h1>
-                    <h2>&nbsp;</h2>
-                </div>
-            </div>
-            <div id="divider" class="divider"><hr /></div>
-            <div id="content">
-                <h3>Welcome!</h3>
-                <p>
-                    We are Asymmetric Effort.  Our mission is to improve cybersecurity through innovative approaches
-                    focused on helping everyone stay safe online.  Whether you are a business or a consumer, our goal
-                    is to develop tools, solutions and systems which protect your identity, data and peace of mind.
-		        </p>
-            </div>
-            <div id="footer">
-                <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
-                <span>&nbsp;</span><span>&nbsp;</span>
-            </div>
+<head>
+    <title>Asymmetric Effort: Home</title>
+    <link rel="shortcut icon" type="image/icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/index.css"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+</head>
+<body>
+<div id="page">
+    <div id="header">
+        <div id="logo">
+            <a href="https://asymmetric-effort.com/">
+                <img src="https://asymmetric-effort.com/logo.png?s=99" alt="logo"/>
+            </a>
         </div>
-    </body>
+        <div id="masthead">
+            <h1>&nbsp;</h1>
+            <h2>&nbsp;</h2>
+        </div>
+    </div>
+    <div id="divider" class="divider">
+        <hr/>
+    </div>
+    <div id="content">
+        <h3>Welcome!</h3>
+        <p>
+            We are Asymmetric Effort. Our mission is to improve cybersecurity through innovative approaches
+            focused on helping everyone stay safe online. Whether you are a business or a consumer, our goal
+            is to develop tools, solutions and systems which protect your identity, data and peace of mind.
+        </p>
+    </div>
+    <div id="footer">
+        <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
+        <span>&nbsp;</span><span>&nbsp;</span>
+    </div>
+</div>
+</body>
 </html>
