--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -9,9 +9,9 @@
     <body>
         <div id="page">
             <div id="header">
-                <div id="logo">
-                    <img src="https://asymmetric-effort.com/logo.png?s=99" />
-                </div>
+                <a href="https://asymmetric-effort.com/">
+                    <img src="https://asymmetric-effort.com/logo.png?s=99" alt="logo"/>
+                </a>
                 <div id="masthead">
                     <h1>&nbsp;</h1>
                     <h2>&nbsp;</h2>
