add main page content

--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -3,8 +3,9 @@
     <head>
         <title>Asymmetric Effort: Home</title>
         <link rel="shortcut icon" type="image/icon" href="/favicon.ico">
-        <link rel="stylesheet" href="/css/index.css" />
-        <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+        <link rel="stylesheet" href="/css/index.css"/>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     </head>
     <body>
         <div id="page">
@@ -17,14 +18,16 @@
                     <h2>&nbsp;</h2>
                 </div>
             </div>
-            <div id="divider" class="divider"><hr /></div>
+            <div class="divider">
+                <hr/>
+            </div>
             <div id="content">
                 <h3>GreyNet</h3>
                 <p>
-                   <b>Asymmetric Effort envisions a world where digital privacy and security are fundamental
-                   human rights, accessible to all.</b> We are committed to creating a decentralized,
-                   quantum-resistant infrastructure that empowers individuals and organizations to protect
-                   their sensitive data from evolving threats.
+                    <b>Asymmetric Effort envisions a world where digital privacy and security are fundamental
+                        human rights, accessible to all.</b> We are committed to creating a decentralized,
+                    quantum-resistant infrastructure that empowers individuals and organizations to protect
+                    their sensitive data from evolving threats.
                 </p>
                 <p>
                     More about our project...
@@ -42,11 +45,13 @@
                     We're busy building features right now, but check back for more information later.
                 </p>
             </div>
-            </div>
-            <div id="footer">
-                <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
-                <span>&nbsp;</span><span>&nbsp;</span>
-            </div>
+        </div>
+        <div class="divider">
+            <hr/>
+        </div>
+        <div id="footer">
+            <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
+            <span>&nbsp;</span><span>&nbsp;</span>
         </div>
     </body>
 </html>
