--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
     </div>
     <div id="content">
         <h3>Welcome!</h3>
+        <h4>About Us</h4>
         <p>
             We are Asymmetric Effort. Our mission is to improve cybersecurity through innovative approaches
             focused on helping everyone stay safe online. Whether you are a business or a consumer, our goal
             is to develop tools, solutions and systems which protect your identity, data and peace of mind.
         </p>
+        <h4>Our Projects</h4>
+        <ul>
+            <li><a href="/greyNet/">GreyNet: A decentralized zero-trust product for the rest of us</a></li>
+        </ul>
+    </div>
+    <div id="divider" class="divider">
+        <hr/>
     </div>
     <div id="footer">
         <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
