add main page content

--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
 <div id="page">
     <div id="header">
         <div id="logo">
-            <a href="https://asymmetric-effort.com/">
-                <img src="https://asymmetric-effort.com/logo.png?s=99" alt="logo"/>
+            <a href="/">
+                <img src="logo.png?s=99" alt="logo"/>
             </a>
-        </div>
-        <div id="masthead">
-            <h1>&nbsp;</h1>
-            <h2>&nbsp;</h2>
         </div>
     </div>
     <div id="divider" class="divider">
