--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -10,13 +10,9 @@
     <body>
         <div id="page">
             <div id="header">
-                <a href="https://asymmetric-effort.com/">
-                    <img src="https://asymmetric-effort.com/logo.png?s=99" alt="logo"/>
+                <a href="/">
+                    <img src="logo.png" alt="logo"/>
                 </a>
-                <div id="masthead">
-                    <h1>&nbsp;</h1>
-                    <h2>&nbsp;</h2>
-                </div>
             </div>
             <div class="divider">
                 <hr/>
