--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -8,46 +8,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     </head>
     <body>
-        <div id="page">
-            <div id="header">
-                <a href="/">
-                    <img src="logo.png" alt="logo"/>
-                </a>
-            </div>
-            <div class="divider">
-                <hr/>
-            </div>
-            <div id="content">
-                <h3>GreyNet</h3>
-                <p>
-                    <b>Asymmetric Effort envisions a world where digital privacy and security are fundamental
-                        human rights, accessible to all.</b> We are committed to creating a decentralized,
-                    quantum-resistant infrastructure that empowers individuals and organizations to protect
-                    their sensitive data from evolving threats.
-                </p>
-                <p>
-                    More about our project...
-                </p>
-                <iframe width="560"
-                        height="315"
-                        src="https://www.youtube.com/embed/vGCxyf-wk50?si=ABPM-Kg0yw8Gs4vc"
-                        title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin"
-                        allowfullscreen>
-                </iframe>
-                <p>
-                    We're busy building features right now, but check back for more information later.
-                </p>
-            </div>
-        </div>
-        <div class="divider">
-            <hr/>
-        </div>
-        <div id="footer">
+        <header>
+            <a href="/">
+                <img src="logo.png" alt="logo"/>
+            </a>
+        </header>
+        <div class="divider"><hr/></div>
+        <article>
+            <h1>GreyNet</h1>
+            <p>
+                <b>Asymmetric Effort envisions a world where digital privacy and security are fundamental
+                human rights, accessible to all.</b> We are committed to creating a decentralized,
+                quantum-resistant infrastructure that empowers individuals and organizations to protect
+                their sensitive data from evolving threats.
+            </p>
+            <p>
+                More about our project...
+            </p>
+            <iframe width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/vGCxyf-wk50?si=ABPM-Kg0yw8Gs4vc"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen>
+            </iframe>
+            <p>
+                We're busy building features right now, but check back for more information later.
+            </p>
+        </article>
+        <div class="divider"><hr/></div>
+        <footer>
             <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
-            <span>&nbsp;</span><span>&nbsp;</span>
-        </div>
+        </footer>
     </body>
 </html>
