--- a/index.html
+++ b/index.html
@@ -1,44 +1,36 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <title>Asymmetric Effort: Home</title>
-    <link rel="shortcut icon" type="image/icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/index.css"/>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-</head>
-<body>
-<div id="page">
-    <div id="header">
-        <div id="logo">
+    <head>
+        <title>Asymmetric Effort: Home</title>
+        <link rel="shortcut icon" type="image/icon" href="/favicon.ico">
+        <link rel="stylesheet" href="/css/index.css"/>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    </head>
+    <body>
+        <header>
             <a href="/">
-                <img src="logo.png?s=99" alt="logo"/>
+                <img src="logo.png" alt="logo"/>
             </a>
+        </header>
+        <div class="divider"><hr/></div>
+        <article>
+            <h1>GreyNet</h1>
+            <h2>About Us</h2>
+            <p>
+                We are Asymmetric Effort. Our mission is to improve cybersecurity through innovative approaches
+                focused on helping everyone stay safe online. Whether you are a business or a consumer, our goal
+                is to develop tools, solutions and systems which protect your identity, data and peace of mind.
+            </p>
+            <h4>Our Projects</h4>
+            <ul>
+                <li><a href="/greyNet/">GreyNet: A decentralized zero-trust product for the rest of us</a></li>
+            </ul>
         </div>
-    </div>
-    <div id="divider" class="divider">
-        <hr/>
-    </div>
-    <div id="content">
-        <h3>Welcome!</h3>
-        <h4>About Us</h4>
-        <p>
-            We are Asymmetric Effort. Our mission is to improve cybersecurity through innovative approaches
-            focused on helping everyone stay safe online. Whether you are a business or a consumer, our goal
-            is to develop tools, solutions and systems which protect your identity, data and peace of mind.
-        </p>
-        <h4>Our Projects</h4>
-        <ul>
-            <li><a href="/greyNet/">GreyNet: A decentralized zero-trust product for the rest of us</a></li>
-        </ul>
-    </div>
-    <div id="divider" class="divider">
-        <hr/>
-    </div>
-    <div id="footer">
-        <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
-        <span>&nbsp;</span><span>&nbsp;</span>
-    </div>
-</div>
-</body>
+        </article>
+        <div class="divider"><hr/></div>
+        <footer>
+            <span>&copy 2024 Asymmetric Effort LLC. All Rights Reserved.</span>
+        </footer>
+    </body>
 </html>
