--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <a href="/">
-                <img src="logo.png" alt="logo"/>
+                <img src="/logo.png" alt="logo"/>
             </a>
         </header>
         <div class="divider"><hr/></div>
