--- a/greyNet/index.html
+++ b/greyNet/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <a href="/">
+            <a href="https://asymmetric-effort.com/">
                 <img src="https://asymmetric-effort.com/logo.png" alt="logo"/>
             </a>
         </header>
